--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,7 +1,3 @@
-.profile-dropdown {
-  position: absolute;
-}
-
 /* Navigation.css */
 
 .navigation-bar {
@@ -9,6 +5,9 @@
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  position: relative;
+  /* Makes the navbar relative to position the user icon */
 }
 
 ul {
@@ -16,11 +15,12 @@ ul {
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 20px;
+  flex-direction: column;
+  gap: 10px;
 }
 
 li {
-  display: inline;
+  display: block;
 }
 
 a {
@@ -35,4 +35,33 @@ a:hover {
 /* Optional: Profile Dropdown styles */
 .profile-dropdown {
   position: absolute;
+  top: 40px;
+  /* Adjust this value as necessary for the dropdown */
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-icon {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  /* Adjust this value to position the icon vertically */
+  right: 20px;
+  /* Position the icon on the top right */
+}
+
+.user-icon svg {
+  color: lightpink;
+  font-size: 30px;
+  /* Adjusts the size of the user icon */
+}
+
+.user-icon:hover {
+  background-color: #ffcccb;
 }
